# Whitespace

./: .gitignore  Makefile  README.md  TEAM.md  docker-compose.yml
backend-analysis/: .env.example  README.md  pyproject.toml
backend-analysis/src/analysis/: __init__.py  cli.py  fixtures.py  ingestion_client.py  pipeline.py  settings.py  validation.py
backend-analysis/src/analysis/api/: app.py
backend-analysis/src/analysis/export/: ranked_export.py
backend-analysis/src/analysis/extraction/: candidate_merger.py  entity_extractor.py  intent_resolver.py  keyphrase_extractor.py  phrase_extractor.py  provenance.py  trigger_extractor.py
backend-analysis/src/analysis/prompts/: generator.py  library.py  llm_client.py  templates.py
backend-analysis/src/analysis/retrieval/: bm25_index.py  corpus_index.py  embedding_index.py  (+1 more)
backend-analysis/tests/: conftest.py  test_api.py  test_export.py  test_extraction.py  test_extraction_intent.py  test_fixtures.py  test_ingestion_client.py  test_pipeline.py  test_prompts.py  test_retrieval_bm25.py  test_retrieval_runner.py  test_scoring.py  test_validation.py
backend-ingestion/: README.md  pyproject.toml
backend-ingestion/scripts/: test.sh
backend-ingestion/src/ingestion/: __init__.py  cli.py  extract_runner.py  models.py  page_classifier.py  pipeline.py  settings.py  tavily_client.py
backend-ingestion/tests/: conftest.py  test_api.py  test_extract_runner.py  test_facts.py  test_normalization.py  test_page_classifier.py  test_pipeline.py  test_pipeline_mock.py  test_repository.py  test_settings.py  test_tavily_client.py
(+52 files in other folders)
