[project]
name = "trigger-discovery-analysis"
version = "0.1.0"
description = "Synthetic prompts, retrieval, trigger scoring"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "uvicorn>=0.30",
  "fastapi>=0.111",
  "jsonschema>=4.22",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4"]
embeddings = ["sentence-transformers>=3.0"]

[project.scripts]
analysis = "analysis.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
