[project]
name = "trigger-discovery-ingestion"
version = "0.1.0"
description = "Tavily crawl/extract and brand knowledge base"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "uvicorn>=0.30",
  "fastapi>=0.111",
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4"]

[project.scripts]
ingestion = "ingestion.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
